--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,46 @@
-<h1>Make your form here</h1>
+<h1>Ahoy there, mateys!</h1>
+
+<form action="/pirates" method="post" id="form1">
+  <h2>Pirate</h2>
+  <p>
+  <label for="pirate_name">Name:</label><br>
+  <input id="pirate_name" type="text" name="pirate[name]">
+  </p>
+  <p>
+  <label for="pirate_weight">Weight:</label><br>
+  <input id="pirate_weight" type="text" name="pirate[weight]">
+  </p>
+  <p>
+  <label for="pirate_height">Height:</label><br>
+  <input id="pirate_height" type="text" name="pirate[height]">
+  </p>
+
+  <h2>Ship(s)</h2>
+  <p>
+  <label for="ship_name_1">Name:</label><br>
+  <input id="ship_name_1" type="text" name="pirate[ships][][name]">
+  </p>
+  <p>
+  <label for="ship_type_1">Type:</label><br>
+  <input id="ship_type_1" type="text" name="pirate[ships][][type]">
+  </p>
+  <p>
+  <label for="ship_booty_1">Booty:</label><br>
+  <input id="ship_booty_1" type="text" name="pirate[ships][][booty]">
+  </p>
+  <br>
+  <p>
+  <label for="ship_name_2">Name:</label><br>
+  <input id="ship_name_2" type="text" name="pirate[ships][][name]">
+  </p>
+  <p>
+  <label for="ship_type_2">Type:</label><br>
+  <input id="ship_type_2" type="text" name="pirate[ships][][type]">
+  </p>
+  <p>
+  <label for="ship_booty_2">Booty:</label><br>
+  <input id="ship_booty_2" type="text" name="pirate[ships][][booty]">
+  </p>
+</form>
+
+<button type="submit" form="form1" value="Submit">Submit</button>
